--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,6 +15,8 @@
     <PackageVersion Include="Avalonia.Browser" Version="11.3.6" />
     <PackageVersion Include="Avalonia.Android" Version="11.3.6" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageVersion Include="Jab" Version="0.12.0" />
+    <PackageVersion Include="LucideAvalonia" Version="1.6.1" />
     <PackageVersion Include="ShadUI" Version="0.1.5" />
     <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.15" />
   </ItemGroup>
